(library
 (name print_table_test)
 (package print-table-tests)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries print_table printbox printbox-md printbox-text uutf)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
